<resources>
    <string name="app_name">RadioButtons</string>
    <string name="radio_button1">YES</string>
    <string name="radio_button2">NO</string>
    <string name="radio_button3">MAYBE</string>
    <string name="radio_button_question">Do you like programming?</string>
    <string name="seek_text">Rate 0</string>
    <string name="check_box_question">What programming lang you like?</string>
    <string name="check_box_one">Kotlin</string>
    <string name="check_box_two">JavaScript</string>
    <string name="check_box_three">Swift</string>
    <string name="checkbox_button">Show</string>
</resources>